[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Primary/Interface/Bootstrap/PlayerUnitGUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Interface Sprites/end_turn_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interface Sprites/Iconsheet.png" type="Texture" id=3]

[sub_resource type="Animation" id=8]
resource_name = "Died"
tracks/0/type = "value"
tracks/0/path = NodePath("../AspectRatioContainer/EndTurn:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HBoxContainer/Control/Control/Portrait:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Icon:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HBoxContainer/Label:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HBoxContainer/Label:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("..:size_flags_stretch_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.001, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
tracks/0/type = "bezier"
tracks/0/path = NodePath("BodyColor:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -19.478, -0.25, 0, 0.25, 0, 35.2101, -0.25, 0, 0.25, 0, -13.1451, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BodyColor:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 10.4881, -0.25, 0, 0.25, 0, -27.7187, -0.25, 0, 0.25, 0, -17.6095, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5 )
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("BodyColor:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BodyColor:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AspectRatioContainer/EndTurn:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HBoxContainer/Control/Control/Portrait:anchor_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Icon:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("HBoxContainer/Label:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("HBoxContainer/Label:anchor_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("HBoxContainer/Label:anchor_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("HBoxContainer/Label:anchor_right")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("..:size_flags_stretch_ratio")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 47 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 47 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 47 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[node name="PlayerUnitGUI" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
new_turn_outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
has_moved_outline_color = Color( 0.219608, 0.219608, 0.219608, 1 )
new_turn_body_color = Color( 0.596078, 0.596078, 0.596078, 1 )
has_set_end_turn_body_color = Color( 0.52, 0.52, 0.52, 1 )
has_attacked_body_color = Color( 0.41, 0.41, 0.41, 1 )

[node name="Outline" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.235294, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1

[node name="BodyColor" type="ColorRect" parent="Body"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Body"]
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Body"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Body/HBoxContainer"]
margin_right = 336.0
margin_bottom = 590.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control" type="Control" parent="Body/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 100.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Body/HBoxContainer/Control/Control"]
anchor_right = 1.0
anchor_bottom = 1.105
margin_left = -100.0
margin_bottom = 100.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Body/HBoxContainer"]
margin_left = 340.0
margin_top = 288.0
margin_right = 1014.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 6
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
autoplay = "RESET"
anims/Died = SubResource( 8 )
anims/Hurt = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
ratio = 0.666
stretch_mode = 1
alignment_horizontal = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EndTurn" type="TextureButton" parent="AspectRatioContainer"]
margin_left = -396.27
margin_bottom = 595.0
hint_tooltip = "End Turn"
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="HBoxContainer" parent="AspectRatioContainer/EndTurn"]
show_behind_parent = true
anchor_bottom = 1.0
margin_left = -110.0
margin_right = -10.0
grow_horizontal = 0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moved" type="TextureRect" parent="AspectRatioContainer/EndTurn/Control2"]
margin_right = 48.0
margin_bottom = 595.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 5
texture = SubResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attacked" type="TextureRect" parent="AspectRatioContainer/EndTurn/Control2"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 595.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 5
texture = SubResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_PlayerUnitGUI_button_down"]
[connection signal="button_up" from="." to="." method="_on_PlayerUnitGUI_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_PlayerUnitGUI_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_PlayerUnitGUI_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_PlayerUnitGUI_focus_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayerUnitGUI_focus_exited"]
[connection signal="pressed" from="AspectRatioContainer/EndTurn" to="." method="_on_EndTurn_pressed"]
